#762: Replace `Collectors.toList()` with `toList()`.